--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@types/node": "^12.20.36",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "primeflex": "^3.1.0",
+    "primeicons": "^4.1.0",
+    "primereact": "^7.0.0-rc.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
